@@ -166,12 +166,17 @@
 
 		<!--<currentelement condition="gt({00_numRecordingsmenuitems}, 4)" delay="0" fadetime="0">-->
 		<currentelement delay="0" fadetime="0">
-			<area condition="not{folder}" x="0" y="0" width="41%" height="60%" layer="3">
+			<area condition="not{folder}++{currentTitle}" x="0" y="0" width="41%" height="60%" layer="3">
 				<drawtext name="title" x="0" y="0" width="100%" align="center" font="{light}" fontsize="12%" color="{clrLightGray}" text="{name}" />
 				<drawtext name="shorttext" x="0" y="{height(title)}" align="center" width="98%" font="{light}" fontsize="7%" color="{clrLightGray}" text="{shorttext}" />
 				<drawimage condition="{hasposter}" name="poster" imagetype="image" path="{posterpath}" x="1%" y="{posy(shorttext)}+{height(shorttext)}*1.7" width="{areawidth}*0.2" height="{areawidth}*0.3" />
 				<drawtextbox condition="{hasposter}" x="2%" y="{posy(shorttext)}+{height(shorttext)}*1.5" width="94%" height="{areaheight} - {posy(poster)}" float="topleft" floatwidth="{width(poster)}*1.2" floatheight="{height(poster)}*1.2" font="{light}" fontsize="7%" color="{clrLightGray}" text="{description}" />
 				<drawtextbox condition="not{hasposter}" x="2%" y="{posy(shorttext)}+{height(shorttext)}+20" width="94%" height="{areaheight} - {posy(poster)}" font="{light}" fontsize="7%" color="{clrLightGray}" text="{description}" />
+			</area>
+			<area condition="not{folder}++not{currentTitle}" x="0" y="0" width="41%" height="60%" layer="3">
+				<drawimage condition="{hasposter}" name="poster" imagetype="image" path="{posterpath}" x="1%" y="0" width="{areawidth}*0.2" height="{areawidth}*0.2 * {posterheight} / {posterwidth}" />
+				<drawtextbox condition="{hasposter}" x="2%" y="0" width="94%" height="{areaheight}" float="topleft" floatwidth="{width(poster)}*1.2" floatheight="{height(poster)}*1.2" font="{light}" fontsize="7%" color="{clrLightGray}" text="{description}" />
+				<drawtextbox condition="not{hasposter}" x="2%" y="0" width="94%" height="{areaheight} - {posy(poster)}" font="{light}" fontsize="7%" color="{clrLightGray}" text="{description}" />
 			</area>
 			<area condition="{folder}" x="0" y="0" width="40%" height="60%" layer="3">
 				<drawimage x="0" y="1%" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="folder" />
