@@ -78,7 +78,7 @@
 		</listelement>
 
 		<currentelement delay="0" fadetime="0">
-			<area x="0" y="0" width="41%" height="56%" layer="3">
+			<area condition="{currentTitle}" x="0" y="0" width="41%" height="56%" layer="3">
 				<drawimage name="logo" imagetype="channellogo" path="{channelid}" x="1%" y="0" width="12%" height="12%" />
 				<drawtext name="channel" x="{width(logo)} + 20" y="0" align="center" width="{areawidth} - {width(logo)} - 30" font="{light}" fontsize="8%" color="{clrWhite}" text="{channelnumber} - {channelname}     {day}.{month}.{year}     {timerstart} - {timerstop}"/>
 				<drawtext name="title" x="0" y="{posy(channel)}+{height(channel)}+10" width="100%" align="center" font="{light}" fontsize="10%" color="{clrLightGray}" text="{eventtitle}" />
@@ -86,6 +86,11 @@
 				<drawimage condition="{hasposter}" name="poster" imagetype="image" path="{posterpath}" x="1%" y="{posy(shorttext)}+{height(shorttext)}*1.5" width="{areawidth}/5" height="{areawidth}/5 * {posterheight} / {posterwidth}"/>
 				<drawtextbox condition="{hasposter}" x="2%" y="{posy(poster)}*0.97" width="94%" height="{areaheight} - {posy(poster)}" float="topleft" floatwidth="{width(poster)}*1.07" floatheight="{height(poster)}*1.07" font="{light}" fontsize="7%" color="{clrLightGray}" text="{eventdescription}" />
 				<drawtextbox condition="not{hasposter}" x="2%" y="{posy(poster)}" width="94%" height="{areaheight} - {posy(poster)}" font="{light}" fontsize="7%" color="{clrLightGray}" text="{eventdescription}" />
+			</area>
+			<area condition="not{currentTitle}" x="0" y="0" width="41%" height="60%" layer="3">
+				<drawimage condition="{hasposter}" name="poster" imagetype="image" path="{posterpath}" x="1%" y="0" width="{areawidth}*0.2" height="{areawidth}*0.2 * {posterheight} / {posterwidth}"/>
+				<drawtextbox condition="{hasposter}" x="2%" y="{posy(poster)}*0.97" width="94%" height="{areaheight} - {posy(poster)}" float="topleft" floatwidth="{width(poster)}*1.07" floatheight="{height(poster)}*1.07" font="{light}" fontsize="7%" color="{clrLightGray}" text="{eventdescription}" />
+				<drawtextbox condition="not{hasposter}" x="2%" y="0" width="94%" height="{areaheight} - {posy(poster)}" font="{light}" fontsize="7%" color="{clrLightGray}" text="{eventdescription}" />
 			</area>
 		</currentelement>
 	</menuitems>
