@@ -1,6 +1,9 @@
 shady-skin Revision History
 ----------------------------------
 
+2016-04-04:
+- Added setup to show title and progressbar in active menuelement
+
 2016-04-02:
 - Some fixes for numMenuItems < 13 
 
